[tool.poetry]
name = "missing"
version = "0.3.0"
description = ""
authors = ["PLM <plm@hardcoretech.co>"]

packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
missing = "src.missing:main"

[tool.pytest.ini_options]
pythonpath = "src"
